tests/stderr-snapshots/integration__integration__mapfiles__intrinsic_jmp_mislabeled_time.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: bad ABI for intrinsic Jmp(): unexpected dword integer arg at index 1
  ┌─ <mapfile-1>:3:3
  │
3 │ 4 Jmp()
  │   ^^^^^ intrinsic defined here
4 │ !ins_signatures
5 │ 4 So
  │   ^^ signature defined here


